0028072: Samples - remove deprecated vector export from MFC sample